Fix alignments on bottom of the page

--- a/src/containers/AddNewProjectForm/AddNewProjectForm.css
+++ b/src/containers/AddNewProjectForm/AddNewProjectForm.css
@@ -2,7 +2,7 @@
   align-items: center;
   border: 1px solid black;
   display: flex;
-  height: 50%;
+  height: 48%;
   justify-content: center;
   width: 100%;
 }
