--- a/src/containers/ColorContainer/ColorContainer.css
+++ b/src/containers/ColorContainer/ColorContainer.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 25px 0px;
+  padding: 20px 0px;
   width: 100%;
 }
 
@@ -13,7 +13,7 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  height: 275px;
+  height: 200px;
   justify-content: center;
   width: 100%;
 }
