--- a/src/containers/ProjectContainer/ProjectContainer.css
+++ b/src/containers/ProjectContainer/ProjectContainer.css
@@ -1,6 +1,6 @@
 .project-container {
   height: 300px;
   overflow: scroll;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   width: 47.2%;
 }
